debug stuff and more logging

--- a/debug_bindingnet.ipynb
+++ b/debug_bindingnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "77d16070-24b3-420a-af97-9813e2a34c99",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "b2431308-e715-488e-9773-fc6fdab3fc69",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "c84e2577-37c7-406b-a667-14e4f0412033",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "60d610a6-fe86-4904-96ee-976ed3d2c687",
    "metadata": {},
    "outputs": [
@@ -67,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "9491a0d7-89d3-43f8-a4d8-45f67fd1e663",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rcut3_path = torch.load(rcut3_path, weights_only=False)"
+    "rcut3_graphs = torch.load(rcut3_path, weights_only=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "d1c908e9-f99f-4390-977a-6115c6948762",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "print(len(rcut3_path))"
+    "print(len(rcut3_graphs))"
    ]
   },
   {
@@ -124,8 +124,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "988c1fb0-46ca-40f7-8a5a-d81f1dc87be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137525\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = pd.read_csv(\"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/indexes/Index_BindingNetv2_pockets_subset_20p.csv\")\n",
+    "print(len(index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0facd4d3-1cff-4937-86a7-4e086cdfc864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137515\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_cross_graphs_prelift_path = os.path.join(data_root, \"subset_20p_no_supercell_no_connect_cross_self/preprocessed/merged\")\n",
+    "no_cross_merged_count = len(os.listdir(no_cross_graphs_prelift_path))\n",
+    "print(no_cross_merged_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3821e6ea-53f7-43c8-b5b6-01c75d1ecf27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(no_cross_graphs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb85cc6-1316-4112-a575-813c97a7e16f",
    "metadata": {},
    "outputs": [],
    "source": []
