update configs and add debug file for training

--- a/debug_bindingnet.ipynb
+++ b/debug_bindingnet.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "77d16070-24b3-420a-af97-9813e2a34c99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kerimbirgi/miniconda3/envs/thesis/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import utils\n",
     "import os\n",
     "import pandas as pd\n",
     "import torch\n",
+    "import numpy as np\n",
     "from visualize import visualize_pt_graph"
    ]
   },
@@ -452,13 +444,145 @@
    "source": [
     "inspect_sample(graph1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "315b2975-a50a-4505-821f-cf74b97412db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137525\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = pd.read_csv(\"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/indexes/Index_BindingNetv2_pockets_subset_20p.csv\")\n",
+    "print(len(index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "07a13856-2470-409d-bfa5-76396d782d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "debug_set = index.tail(200)\n",
+    "print(len(debug_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1ae5dfae-d3e2-49ac-9800-882b3a35dd4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = \"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/indexes/debug_BindingNetv2_pockets_subset_20p.csv\"\n",
+    "debug_set.to_csv(output_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d544c710-939b-43b3-8412-4b560338331f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (95772,) [3 1 2 8 5] ... [137518 137505 137524 137519 137506]\n",
+      "Val: (20883,) [ 4 10 20 24 29] ... [137498 137503 137511 137507 137515]\n",
+      "Test: (20856,) [ 0  6 14 21 26] ... [137499 137495 137523 137517 137522]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ind = np.load(\"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/splits/subset_20p/train_indices.npy\")\n",
+    "val_ind = np.load(\"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/splits/subset_20p/val_indices.npy\")\n",
+    "test_ind = np.load(\"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/splits/subset_20p/test_indices.npy\")\n",
+    "print(\"Train:\", train_ind.shape, train_ind[:5], \"...\", train_ind[-5:])\n",
+    "print(\"Val:\", val_ind.shape, val_ind[:5], \"...\", val_ind[-5:])\n",
+    "print(\"Test:\", test_ind.shape, test_ind[:5], \"...\", test_ind[-5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cbb36255-735c-4137-9e65-f57a4b54a55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (140,) [0 1 2 3 4] ... [135 136 137 138 139]\n",
+      "Val: (30,) [140 141 142 143 144] ... [165 166 167 168 169]\n",
+      "Test: (30,) [170 171 172 173 174] ... [195 196 197 198 199]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an array of indices\n",
+    "n_samples = len(debug_set)\n",
+    "indices = np.arange(n_samples)\n",
+    "\n",
+    "# Compute split sizes\n",
+    "n_train = int(0.7 * n_samples)   # 70%\n",
+    "n_val   = int(0.15 * n_samples)  # 15%\n",
+    "# The rest goes to test\n",
+    "n_test  = n_samples - n_train - n_val\n",
+    "\n",
+    "# Slice into splits\n",
+    "train_index = indices[:n_train]\n",
+    "val_index   = indices[n_train:n_train+n_val]\n",
+    "test_index  = indices[n_train+n_val:]\n",
+    "\n",
+    "print(\"Train:\", train_index.shape, train_index[:5], \"...\", train_index[-5:])\n",
+    "print(\"Val:\", val_index.shape, val_index[:5], \"...\", val_index[-5:])\n",
+    "print(\"Test:\", test_index.shape, test_index[:5], \"...\", test_index[-5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8fee5890-f074-4716-aa15-62e04d00f17c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_output_path = \"/rds/general/user/kgb24/ephemeral/BindingNetv2/processed/splits/debug/\"\n",
+    "np.save(index_output_path + 'train_indices.npy', train_index)\n",
+    "np.save(index_output_path + 'val_indices.npy', train_index)\n",
+    "np.save(index_output_path + 'test_indices.npy', train_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90fce01f-1985-40d6-8e67-43369d9a6196",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "etnn-ipykernel",
    "language": "python",
-   "name": "python3"
+   "name": "etnn-ipykernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -470,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
